[gd_scene load_steps=5 format=3 uid="uid://dqs8t0fmvlpkt"]

[ext_resource type="PackedScene" uid="uid://ct85uhd6hy7mo" path="res://Scenes/UI/sound_button.tscn" id="1_ejodb"]
[ext_resource type="Script" path="res://Scripts/UI/quiz_screen.gd" id="1_wyi82"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2lmhl"]
bg_color = Color(0.847474, 0.847474, 0.847474, 1)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0.122252, 0.122252, 0.122252, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bc0ew"]
bg_color = Color(0.847474, 0.847474, 0.847474, 1)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0.122252, 0.122252, 0.122252, 1)
corner_radius_top_left = 12

[node name="QuizScreen" type="CanvasLayer"]
script = ExtResource("1_wyi82")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 1056.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_2lmhl")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="QuestionLabel" type="Label" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Welcher Befehl zeigt den Inhalt eines Verzeichnisses an?"
autowrap_mode = 3

[node name="PanelContainer2" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -876.0
offset_top = -376.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bc0ew")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="GridContainer" type="GridContainer" parent="PanelContainer2/MarginContainer"]
layout_mode = 2
columns = 2

[node name="QuizButton1" parent="PanelContainer2/MarginContainer/GridContainer" instance=ExtResource("1_ejodb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ls"

[node name="QuizButton2" parent="PanelContainer2/MarginContainer/GridContainer" instance=ExtResource("1_ejodb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "dir"

[node name="QuizButton3" parent="PanelContainer2/MarginContainer/GridContainer" instance=ExtResource("1_ejodb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "show"

[node name="QuizButton4" parent="PanelContainer2/MarginContainer/GridContainer" instance=ExtResource("1_ejodb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "list"

[node name="TimeProgressBar" type="ProgressBar" parent="."]
visible = false
custom_minimum_size = Vector2(0, 20)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -950.0
offset_top = -25.0
offset_right = 950.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(950, 10)
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"EXP_Progress_Bar"
max_value = 1.0
value = 1.0
show_percentage = false
